[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jim Newsome <jnewsome@torproject.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
